--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "named-slots",
-  "version": "0.0.1",
+  "version": "0.1.0",
   "type": "module",
   "files": [
     "dist"
@@ -24,6 +24,7 @@
   "license": "MIT",
   "description": "Named slots for preact",
   "devDependencies": {
+    "@types/node": "^22.13.10",
     "typescript": "^5.8.2"
   }
 }
