feat(build): add script to check builds, change frameworks to use packaged version

--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     }
   },
   "scripts": {
-    "build": "tsc"
+    "build": "tsc",
+    "check:builds": "bash ./scripts/check-builds.sh"
   },
   "repository": {
     "type": "git",
