--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,6 +10,7 @@
       "sourceMap": true,
       "moduleResolution": "nodenext",
       "strict": true,
+      "types": ["node"],
       "erasableSyntaxOnly": true
     }
   }
