--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
   "description": "Named slots for preact",
   "devDependencies": {
     "@types/node": "^22.13.10",
+    "prettier": "3.6.2",
     "typescript": "^5.8.2"
   }
 }
