--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "named-slots",
-  "version": "0.3.3",
+  "version": "0.4.0-beta.0",
   "type": "module",
   "files": [
     "dist"
@@ -34,7 +34,7 @@
   },
   "author": "Ian Bobinac",
   "license": "MIT",
-  "description": "Named slots for preact",
+  "description": "Named slots for preact, react and solid",
   "devDependencies": {
     "@types/node": "^22.13.10",
     "prettier": "3.6.2",
